# CS236-Project

./: CMakeLists.txt  Database.h  DatalogProgram.h  Fact.h  Interpreter.h  Parameter.h  Parser.h  Predicate.h  Query.h  Relation.h  Rule.h  Scanner.h  Scheme.h  Token.h  Tuple.h  main.cpp
